# campus-api

./: Cargo.toml  README.md
src/: GEANT TLS RSA 1.pem  auth.rs  color_stuff.rs  encryption.rs  main.rs  ratelimit_keyextractor.rs  routes.rs  services.rs  types.rs
src/campus_backend/: login.rs  req_client_funcs.rs
