[package]
name = "campus-api"
version = "1.1.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.203", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
axum = "0.8.1"
jsonwebtoken = { version = "10.1.0", features = ["aws_lc_rs"] }
serde_json = "1.0.120"
reqwest_cookie_store = { version = "0.9.0", features = ["serde"] }
scraper = "0.24"
reqwest = { version = "0.12.5", features = ["cookies", "json", "rustls-tls"], default-features = false }
anyhow = "1.0.86"
cookie_store = "0.22.0"
tower-http = { version = "0.6.1", features = ["cors"] }
http = "1.1.0"
regex = "1.10.5"
lazy_static = "1.5.0"
fnv = "1.0.7"
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.9.0"
tower_governor = "0.8"
pretty_env_logger = "0.5.0"
log = "0.4.22"
reqwest-middleware = "0.4.0"
reqwest-retry = "0.7.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
